# a4u

./: .env.example  .gitignore  COMMIT_MSG_TMP.txt  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
XTTS/: .dockerignore  Dockerfile  README.md  download_model.py  handler.py  requirements.txt  test_local.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_i18n.py  0003_template_default.py  0004_avatar_v2.py  0005_avatar_voice_script.py  0006_pdf_bg_opacity.py  0007_org_course_settings.py  0008_permission_description_text.py  0009_course_taxonomy.py  0010_courses.py  0011_course_document_summary_meta.py  0012_course_architecture.py  0013_architecture_progress.py  0014_lesson_structure.py  0015_lesson_content.py  0016_lesson_pdf_export.py  0017_didactic_setup_confirmed.py  0018_stale_detection_timestamps.py  0019_lesson_slides.py  0020_lesson_slides_pdf.py  0021_pdf_template_kind.py  0022_unify_slide_templates.py  0023_lesson_speech.py  0024_lesson_speech_pdf.py  0025_lesson_video.py  0026_avatar_tts_latents_and_course_video_language.py  0027_drop_avatar_tts_latents.py  0028_assessment_lesson.py  0029_avatar_video.py  0030_course_video_avatar_status.py  0031_course_duplication.py  0032_duplication_progress_detail.py  0033_course_corso_di_laurea.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  admin_avatar_config.py  admin_course_taxonomy.py  admin_i18n.py  admin_metrics.py  admin_organizations.py  admin_permissions.py  admin_users.py  auth.py  course_taxonomy.py  courses.py  i18n.py  invitations.py  me_avatar.py  memberships.py  nova.py  org_metrics.py  organization_course_settings.py  pdf_templates.py  slide_templates.py  system.py
backend/app/core/: audit.py  config.py  course_phase_order.py  deps.py  errors.py  i18n_scripts.py  logging.py  permissions.py  prompt_safety.py  rate_limit.py  security.py
backend/app/db/: base.py  seed.py  session.py
backend/app/i18n/seed_locales/: bg.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fi.json  fr.json  ga.json  hr.json  hu.json  it.json  lt.json  lv.json  mt.json  nl.json  pl.json  pt.json  ro.json  sk.json  sl.json  sv.json
backend/app/middleware/: access_log.py  csrf.py  request_id.py  security_headers.py
backend/app/models/: __init__.py  audit_log.py  avatar.py  avatar_clip.py  avatar_clip_prompt.py  avatar_voice_script.py  course.py  course_document.py  course_duplication_job.py  course_lesson.py  course_module.py  course_taxonomy.py  invitation.py  language.py  login_attempt.py  membership.py  organization.py  organization_course_settings.py  pdf_template.py  permission.py  refresh_token.py  role.py  slide_template.py  translation.py  user.py
backend/app/musetalk_client/: README.md
backend/app/musetalk_client/scripts/client/: clip_manifest.py  runpod_client.py  synth_random_lipsync.py  video_assembler.py
backend/app/schemas/: admin_metrics.py  auth.py  avatar.py  common.py  course.py  course_architecture.py  course_duplication.py  course_glossary.py  course_lesson_avatar_video.py  course_lesson_content.py  course_lesson_slides.py  course_lesson_speech.py  course_lesson_structure.py  course_lesson_video.py  course_objectives_generation.py  course_taxonomy.py  document_summary.py  i18n.py  membership.py  nova.py  org_metrics.py  organization.py  organization_course_settings.py  paper_ai_summary.py  paper_search.py  template.py  user.py
backend/app/services/: admin_metrics_service.py  asset_validation_service.py  auth_service.py  avatar_clip_worker.py  avatar_config_service.py  avatar_service.py  avatar_tts_latents_service.py  avatar_tts_latents_worker.py  course_architecture_crud.py  course_architecture_service.py  course_architecture_worker.py  course_document_worker.py  course_duplication_paths.py  course_duplication_service.py  course_duplication_worker.py  course_glossary_service.py  course_lesson_avatar_video_service.py  course_lesson_avatar_video_worker.py  course_lesson_content_crud.py  course_lesson_content_service.py  course_lesson_content_worker.py  course_lesson_pdf_service.py  course_lesson_pdf_worker.py  course_lesson_slides_crud.py  course_lesson_slides_pdf_service.py  course_lesson_slides_pdf_worker.py  course_lesson_slides_service.py  course_lesson_slides_worker.py  course_lesson_speech_crud.py  course_lesson_speech_pdf_service.py  course_lesson_speech_pdf_worker.py  course_lesson_speech_service.py  course_lesson_speech_worker.py  course_lesson_structure_crud.py  course_lesson_structure_service.py  course_lesson_structure_worker.py  course_lesson_video_service.py  course_lesson_video_worker.py  course_module_pdf_service.py  course_service.py  (+47 more)
backend/app/templates/: lesson_pdf.html.j2  lesson_slides_pdf.html.j2  lesson_slides_video.html.j2  lesson_speech_pdf.html.j2
backend/app/utils/: pagination.py
backend/scripts/: ftp_spike.py  migrate_files_to_ovh.py
backend/tests/: conftest.py  test_admin_user_management.py  test_asset_localization_gate.py  test_auth_flow.py  test_health.py  test_permissions.py  test_profile_self_service.py  test_remote_storage.py
deploy/seed/: README.md
docs/: 01-overview.md  02-architecture.md  03-getting-started.md  04-configuration.md  05-security.md  06-permissions.md  07-deployment.md  PROMPTS.md  README.md  api-reference.md  storage-ovh-migration.md
docs/backend/: 01-entry.md  02-core.md  03-middleware.md  (+9 more)
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+245 files in other folders)
