[project]
name = "a4u-backend"
version = "0.1.0"
description = "Backend FastAPI per la piattaforma a4u (corsi universitari)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.20",
    "pillow>=11.0.0",
    "slowapi>=0.1.9",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "email-validator>=2.2.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "docx2txt>=0.8",
    "striprtf>=0.0.26",
    "playwright>=1.49.0",
    "jinja2>=3.1.4",
    "markdown-it-py[plugins]>=3.0.0",
    "weasyprint>=63.0",
    "latex2mathml>=3.77",
    "pypdf>=4.0",
    # Video MP4 generation (Fase 6 §9) — deps base "leggere" (~50 MB):
    # numpy/soundfile vengono importate top-level dai service video, per
    # cui devono essere installate anche se la feature video non è in uso.
    # Le deps pesanti (`coqui-tts`, `torch`, `torchaudio`, ~3 GB) sono
    # nell'extra `[video]`: il backend si avvia senza, e il worker video
    # solleva un errore chiaro al primo trigger se mancano.
    "numpy>=1.26.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-passlib",
]
# Opzionale: TTS XTTS-v2 per la generazione video MP4 (Fase 6 §9).
# Installazione richiede ~3 GB (torch + coqui-tts) + ~1.8 GB di modello
# scaricato lazy al primo job. Inoltre serve `ffmpeg` binario in PATH.
# Abilita con `pip install '.[video]'`.
#
# Note pinning:
# - `transformers>=4.45,<5`: coqui-tts internamente importa
#   `isin_mps_friendly` (introdotto in transformers 4.45). Il requirement
#   di coqui-tts è troppo lasco e pip risolverebbe a 4.43/4.44 senza
#   quella funzione → ImportError al primo import di TTS.api.
video = [
    # `[codec]` aggiunge `torchcodec` (dep richiesta da PyTorch >=2.9 per
    # audio I/O — senza, import di TTS solleva
    # `From Pytorch 2.9, the torchcodec library is required...`).
    "coqui-tts[codec]>=0.24.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.45.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "C4", "SIM", "RUF"]
ignore = ["B008"]  # FastAPI usa Depends() come default arg

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]
"tests/*.py" = ["N802", "N803"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["passlib.*", "slowapi.*", "jose.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"
