[project]
name = "a4u-backend"
version = "0.1.0"
description = "Backend FastAPI per la piattaforma a4u (corsi universitari)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.20",
    "pillow>=11.0.0",
    "slowapi>=0.1.9",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "email-validator>=2.2.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "docx2txt>=0.8",
    "striprtf>=0.0.26",
    "playwright>=1.49.0",
    "jinja2>=3.1.4",
    "markdown-it-py[plugins]>=3.0.0",
    "weasyprint>=63.0",
    "latex2mathml>=3.77",
    "pypdf>=4.0",
    # Video MP4 generation (Fase 6 §9): numpy/soundfile per assemblare
    # l'audio ricevuto da RunPod prima dell'encoding ffmpeg. Il TTS gira
    # su RunPod GPU (cartella `XTTS/`), niente torch/coqui nel backend.
    "numpy>=1.26.0",
    "soundfile>=0.12.0",
    # "Video con Avatar" (§9b): il client MuseTalk vendored
    # (`app/musetalk_client/`) gira come subprocess e usa boto3 per
    # Cloudflare R2 (S3-compatible) e requests per l'endpoint RunPod.
    "boto3>=1.35.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-passlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "C4", "SIM", "RUF"]
ignore = ["B008"]  # FastAPI usa Depends() come default arg

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]
"tests/*.py" = ["N802", "N803"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["passlib.*", "slowapi.*", "jose.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"
